...
const styles = StyleSheet.create({
  container: {
    alignItems: 'center',
    justifyContent: 'center',
    padding: 20,
    marginTop: 40,
    width: '100%',
  },
  lottie: {
    width: 180,
    height: 180,
    marginBottom: 16,
  },
...
